# submarine

./: Cargo.toml  License.md  Readme.md
src/: auth.rs  create_playlist.rs  data.rs  delete_playlist.rs  get_album.rs  get_album_list.rs  get_album_list2.rs  get_albums.rs  get_artist.rs  get_artist_albums.rs  get_artists.rs  get_cover_art.rs  get_playlist.rs  get_playlists.rs  get_scan_status.rs  get_song.rs  lib.rs  ping.rs  star.rs  stream.rs  unstar.rs  update_playlist.rs
src/api/: add_chat_message.rs  change_password.rs  create_bookmark.rs  create_internet_radio_station.rs  create_playlist.rs  create_podcast_channel.rs  create_share.rs  create_user.rs  delete_bookmark.rs  delete_internet_radio_station.rs  delete_playlist.rs  delete_podcast_channel.rs  delete_podcast_episode.rs  delete_share.rs  delete_user.rs  download.rs  download_podcast_episode.rs  get_album.rs  get_album_info.rs  get_album_info2.rs  get_album_list.rs  get_album_list2.rs  get_artist.rs  get_artist_info.rs  get_artist_info2.rs  get_artists.rs  get_avatar.rs  get_bookmarks.rs  get_captions.rs  get_chat_messages.rs  get_cover_art.rs  get_genres.rs  get_indexes.rs  get_internet_radio_stations.rs  get_license.rs  get_lyrics.rs  get_music_directory.rs  get_music_folders.rs  get_newest_podcasts.rs  get_now_playing.rs  (+37 more)
