[package]
name = "submarine"
version = "0.1.1"
edition = "2021"
resolver = "2"
authors = ["Thomas Eppers"]
description = "A library for connecting with a subsonic server"
readme = "Readme.md"
repository = "https://github.com/eppixx/submarine"
documentation = "https://docs.rs/submarine"
license = "MIT"
keywords = ["subsonic", "api", "music", "streaming", "REST"]
categories = ["api-bindings", "multimedia::audio", "network-programming"]



[features]
navidrome = []

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "multipart", "stream", "query"] }
md5 = "0.8"
chrono = { version = "0.4", features = ["std", "serde"] }
rand = "0.9" # for creating salt
thiserror = "2.0"
cfg-if = "1.0"
url = "2.5"

[dev-dependencies]
tokio = { version = "1.32.0" , features = ["full"] }
